# hydro

./: .clang-format  CMakeLists.txt  game.cc  main.cc
include/: Shader.h  VertexBuffer.h  Window.h
include/Core/: Window.h
include/Graphics/: IndexBuffer.h  Renderer.h  Shader.h  VertexArray.h  VertexBuffer.h
shaders/: default.glsl  triangle.glsl
src/: Shader.cc  Window.cc
src/Core/: Window.cc
src/Graphics/: IndexBuffer.cc  Renderer.cc  Shader.cc  VertexArray.cc  VertexBuffer.cc
